tests/baselines/reference/parser_continueNotInIterationStatement3.errors.txt
parser_continueNotInIterationStatement3.ts(3,5): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.


==== parser_continueNotInIterationStatement3.ts (1 errors) ====
    switch (0) {
      default:
        continue;
        ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
    }